--- a/web06/WebContent/WEB-INF/web.xml
+++ b/web06/WebContent/WEB-INF/web.xml
@@ -7,7 +7,11 @@
 	<display-name>web06</display-name>
 	
   <!-- 컨텍스트 초기화 파라미터 -->
-
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>/WEB-INF/application-context.properties</param-value>
+  </context-param>
+  
 	<!-- 필터 선언 -->
 	
 	<!-- 필터 URL 매핑 -->
