--- a/web06/.settings/org.eclipse.core.resources.prefs
+++ b/web06/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,9 @@
 eclipse.preferences.version=1
+encoding//src/spms/context/ApplicationContext.java=UTF-8
 encoding//src/spms/controls/LogInController.java=UTF-8
 encoding//src/spms/controls/MemberAddController.java=UTF-8
 encoding//src/spms/controls/MemberListController.java=UTF-8
 encoding//src/spms/dao/MemberDao.java=UTF-8
+encoding//src/spms/dao/MySqlMemberDao.java=UTF-8
 encoding//src/spms/listeners/ContextLoaderListener.java=UTF-8
+encoding//src/spms/servlets/DispatcherServlet.java=UTF-8
